--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:7000",
+  "proxy": "https://citizens-backend-lzzl.onrender.com",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
